--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
 
 [submodule "themes/next"]
 	path = themes/next
-	url = https://github.com/theme-next/hexo-theme-next.git
+	url = https://github.com/houcl/hexo-theme-next.git
+  branch = xuyun
